// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`blackvueGpsSidecar.parse > parses BlackVue-style synthetic .gps with [unix_ms] prefix 1`] = `
[
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 90,
    "lat": 50,
    "lon": 30,
    "mp4Filename": "20231114_120000_NF.mp4",
    "speedMs": 2.57222,
    "unixSeconds": 1699963200,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 91,
    "lat": 50.000083333333336,
    "lon": 30.00016666666667,
    "mp4Filename": "20231114_120000_NF.mp4",
    "speedMs": 2.8294420000000002,
    "unixSeconds": 1699963201,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 92,
    "lat": 50.00016666666667,
    "lon": 30.000333333333334,
    "mp4Filename": "20231114_120000_NF.mp4",
    "speedMs": 3.086664,
    "unixSeconds": 1699963202,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 94,
    "lat": 50.00033333333334,
    "lon": 30.000666666666667,
    "mp4Filename": "20231114_120000_NF.mp4",
    "speedMs": 3.601108,
    "unixSeconds": 1699963204,
  },
]
`;

exports[`nmeaSidecar.parse > parses Mio-style synthetic .NMEA without prefix 1`] = `
[
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 90,
    "lat": 50,
    "lon": 30,
    "mp4Filename": "FILE001.MP4",
    "speedMs": 2.57222,
    "unixSeconds": 1699963200,
  },
  {
    "accelXg": -0.048828125,
    "accelYg": -0.375,
    "accelZg": 0.974609375,
    "active": true,
    "bearingDeg": 91,
    "lat": 50.000083333333336,
    "lon": 30.00016666666667,
    "mp4Filename": "FILE001.MP4",
    "speedMs": 2.8294420000000002,
    "unixSeconds": 1699963201,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 92,
    "lat": 50.00016666666667,
    "lon": 30.000333333333334,
    "mp4Filename": "FILE001.MP4",
    "speedMs": 3.086664,
    "unixSeconds": 1699963202,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 94,
    "lat": 50.00033333333334,
    "lon": 30.000666666666667,
    "mp4Filename": "FILE001.MP4",
    "speedMs": 3.601108,
    "unixSeconds": 1699963204,
  },
]
`;

exports[`nmeaSidecar.parse > parses real-anonymized DashcamViewer corpus sample (.nmea with $GSENSOR lines) 1`] = `
[
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": -0.046875,
    "active": true,
    "bearingDeg": 323.73,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 14.75425392,
    "unixSeconds": 1359437411,
  },
  {
    "accelXg": 0,
    "accelYg": -0.046875,
    "accelZg": -0.0625,
    "active": true,
    "bearingDeg": 322.58,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 15.212109080000001,
    "unixSeconds": 1359437412,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 322.33,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 15.11436472,
    "unixSeconds": 1359437413,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 323.21,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 15.14523136,
    "unixSeconds": 1359437414,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": -0.046875,
    "active": true,
    "bearingDeg": 325.16,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 14.527898559999999,
    "unixSeconds": 1359437415,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 325.95,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 14.64107624,
    "unixSeconds": 1359437416,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 326.34,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 14.419865320000001,
    "unixSeconds": 1359437417,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 326.13,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 14.888009360000002,
    "unixSeconds": 1359437418,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 322.88,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 15.68539756,
    "unixSeconds": 1359437419,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 324.12,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 16.091808320000002,
    "unixSeconds": 1359437420,
  },
  {
    "accelXg": 0.322265625,
    "accelYg": -0.046875,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 322.31,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 16.4107636,
    "unixSeconds": 1359437421,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 320.28,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 16.035219480000002,
    "unixSeconds": 1359437422,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 322.09,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 15.5362088,
    "unixSeconds": 1359437423,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 322.71,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 15.68539756,
    "unixSeconds": 1359437424,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 319.41,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 16.13810828,
    "unixSeconds": 1359437425,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 319.49,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 15.62880872,
    "unixSeconds": 1359437427,
  },
  {
    "accelXg": 0.306640625,
    "accelYg": 0.0146484375,
    "accelZg": 0.0146484375,
    "active": true,
    "bearingDeg": 322,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 14.95488708,
    "unixSeconds": 1359437428,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 322.8,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 14.11119892,
    "unixSeconds": 1359437430,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0.0302734375,
    "active": true,
    "bearingDeg": 323.26,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 13.586466040000001,
    "unixSeconds": 1359437431,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 320.95,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 13.05658872,
    "unixSeconds": 1359437432,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": -0.03125,
    "active": true,
    "bearingDeg": 325.79,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 13.2212108,
    "unixSeconds": 1359437433,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 327.23,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 13.62762156,
    "unixSeconds": 1359437434,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0.0458984375,
    "active": true,
    "bearingDeg": 326.03,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 14.44044308,
    "unixSeconds": 1359437435,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 325.37,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 14.244954360000001,
    "unixSeconds": 1359437436,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 329.15,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 14.805698320000001,
    "unixSeconds": 1359437437,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 329.07,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 14.65650956,
    "unixSeconds": 1359437438,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 329.63,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 14.05461008,
    "unixSeconds": 1359437439,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 328.52,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 12.89196664,
    "unixSeconds": 1359437440,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 331.29,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 11.66244548,
    "unixSeconds": 1359437441,
  },
  {
    "accelXg": 0,
    "accelYg": 0,
    "accelZg": 0,
    "active": true,
    "bearingDeg": 331.65,
    "lat": -34,
    "lon": 151,
    "mp4Filename": "MOV_0581.mp4",
    "speedMs": 10.407202120000001,
    "unixSeconds": 1359437442,
  },
]
`;
